[gd_scene load_steps=2 format=2]

[ext_resource path="res://PlayerStats/PlayerStatusEffects.gd" type="Script" id=1]

[node name="PlayerStatusEffects" type="Node2D"]
script = ExtResource( 1 )

[node name="PlayerStatusEffectTimer" type="Timer" parent="."]
autostart = true
[connection signal="status_effects_changed" from="." to="." method="_on_PlayerStatusEffects_status_effects_changed"]
[connection signal="timeout" from="PlayerStatusEffectTimer" to="." method="_on_PlayerStatusEffectTimer_timeout"]
